RESOLVED FIXED283411
REGRESSION(286479@main): [GStreamer][WebRTC] Broke webrtc/captureCanvas-webrtc.html
https://bugs.webkit.org/show_bug.cgi?id=283411
Summary REGRESSION(286479@main): [GStreamer][WebRTC] Broke webrtc/captureCanvas-webrt...
Philippe Normand
Reported 2024-11-20 04:27:44 PST
.
Attachments
Philippe Normand
Comment 1 2024-11-20 04:30:14 PST
EWS
Comment 2 2024-11-21 01:12:10 PST
Committed 286895@main (0b855998667a): <https://commits.webkit.org/286895@main> Reviewed commits have been landed. Closing PR #36889 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-11-21 01:13:14 PST
Note You need to log in before you can comment on or make changes to this bug.