Cherry-pick 286895@main (0b855998667a). https://bugs.webkit.org/show_bug.cgi?id=283411

REGRESSION(286479@main): [GStreamer][WebRTC] Broke webrtc/captureCanvas-webrtc.html
    https://bugs.webkit.org/show_bug.cgi?id=283411

    Reviewed by Xabier Rodriguez-Calvar.

    The outgoing tracks no longer require a livesync element since the WebRTC pipeline and playback
    pipeline share the same clock.

    * Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingAudioSourceGStreamer.cpp:
    (WebCore::RealtimeOutgoingAudioSourceGStreamer::linkTee): Deleted.
    * Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingAudioSourceGStreamer.h:
    * Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingMediaSourceGStreamer.cpp:
    (WebCore::RealtimeOutgoingMediaSourceGStreamer::RealtimeOutgoingMediaSourceGStreamer):
    (WebCore::RealtimeOutgoingMediaSourceGStreamer::start):
    (WebCore::RealtimeOutgoingMediaSourceGStreamer::stopOutgoingSource):
    (WebCore::RealtimeOutgoingMediaSourceGStreamer::linkSource):
    (WebCore::RealtimeOutgoingMediaSourceGStreamer::configurePacketizers):
    (WebCore::RealtimeOutgoingMediaSourceGStreamer::teardown):
    * Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingMediaSourceGStreamer.h:
    * Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingVideoSourceGStreamer.cpp:
    (WebCore::RealtimeOutgoingVideoSourceGStreamer::linkTee): Deleted.
    * Source/WebCore/platform/mediastream/gstreamer/RealtimeOutgoingVideoSourceGStreamer.h:

    Canonical link: https://commits.webkit.org/286895@main

Canonical link: https://commits.webkit.org/282416.314@webkitglib/2.46